stuck on an issue after adding ajax form to delete thing modal

--- a/assets/styles/pages/things/available-things.less
+++ b/assets/styles/pages/things/available-things.less
@@ -13,7 +13,7 @@ text-decoration-color: blue;
   }
 
   .listings {
-    max-width: 1000px;
+    max-width: 500px;
     margin: 0 auto;
     column-width: 230px;
     column-gap: 5px;
